@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.execution.jshell;
 
 import com.intellij.execution.ExecutionManager;
@@ -97,7 +83,7 @@ public class JShellHandler {
     final PipedInputStream is = new PipedInputStream();
     final OutputStreamWriter readerSink = new OutputStreamWriter(new PipedOutputStream(is));
     myMessageReader = new MessageReader<>(is, Response.class);
-    myMessageWriter = new MessageWriter<>(handler.getProcessInput(), Request.class);
+    myMessageWriter = new MessageWriter<>(handler.getProcessInput());
 
     handler.addProcessListener(new ProcessAdapter() {
       @Override
@@ -241,8 +227,6 @@ public class JShellHandler {
     if (DEBUG_PORT > 0) {
       cmdLine.addParameter("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=" + DEBUG_PORT);
     }
-    cmdLine.addParameter("--add-modules");
-    cmdLine.addParameter("java.xml.bind");
 
     final StringBuilder launchCp = new StringBuilder().append(frontEndPath);
     final String protocolJar = getLibPath(Endpoint.class);
